--- a/src/app/admin/company/company.component.html
+++ b/src/app/admin/company/company.component.html
@@ -124,8 +124,8 @@
           <div class="form-group row">
             <label class="col-4 col-form-label  col-form-label-sm">Name</label>
             <div class="col-8">
-              <input type="text" class="form-control form-control-sm" [(ngModel)]="Record.comp_name"
-                (blur)="OnBlur('comp_name')" required maxlength="60" />
+              <input type="text" class="form-control form-control-sm" [(ngModel)]="Record.comp_name2"
+                (blur)="OnBlur('comp_name2')" required maxlength="60" />
             </div>
           </div>
 
