--- a/src/app/pim/spot/pimjobdet.component.html
+++ b/src/app/pim/spot/pimjobdet.component.html
@@ -48,6 +48,14 @@
   <div class="col-sm-3 border p-2">
 
 
+    <div class="form-group row mt-1">
+      <label class="col-4 col-form-label col-form-label-sm">Remarks</label>
+      <div class="col-8">
+        <input type="text" class="form-control form-control-sm" [(ngModel)]="Record.spotd_remarks" disabled />
+      </div>
+    </div>    
+
+
     <!-- 
     <div class="form-group row mt-1">
       <label class="col-4 col-form-label  col-form-label-sm">ArtWork</label>
