--- a/src/app/shared/inputfile/inputfile.component.html
+++ b/src/app/shared/inputfile/inputfile.component.html
@@ -49,7 +49,7 @@
 
   <div class="modal-body mx-auto">
     <p>
-      <img class="border" src="{{serverFolder}}\{{fileName}}" height="500" width="500">
+      <img class="border" src="{{serverFolder}}\{{fileName}}" width="100%" height="100%" >
     </p>
   </div>
 
