--- a/src/app/pim/spot/pimspotdet.component.html
+++ b/src/app/pim/spot/pimspotdet.component.html
@@ -91,6 +91,15 @@
       </div>
 
       <div class="form-group row mt-1" >
+        <label class="col-4 col-form-label  col-form-label-sm"></label>
+        <div class="col-8">
+          <input class ="mr-1" type="checkbox"  [(ngModel)]="Record.spotd_close_view_resize" />
+          <span>Resize Image</span>
+        </div>
+      </div>      
+
+
+      <div class="form-group row mt-1" >
         <label class="col-4 col-form-label col-form-label-sm">Long View</label>
         <div class="col-8">
           <InputFile 
@@ -103,6 +112,15 @@
           </InputFile>
         </div>
       </div>
+
+      <div class="form-group row mt-1" >
+        <label class="col-4 col-form-label  col-form-label-sm"></label>
+        <div class="col-8">
+          <input class ="mr-1" type="checkbox"  [(ngModel)]="Record.spotd_long_view_resize" />
+          <span>Resize Image</span>
+        </div>
+      </div>      
+
 
       <div class="form-group row mt-1"  >
         <label class="col-4 col-form-label col-form-label-sm">Final View</label>
@@ -117,6 +135,15 @@
           </InputFile>
         </div>
       </div>
+
+      <div class="form-group row mt-1" >
+        <label class="col-4 col-form-label  col-form-label-sm"></label>
+        <div class="col-8">
+          <input class ="mr-1" type="checkbox"  [(ngModel)]="Record.spotd_final_view_resize" />
+          <span>Resize Image</span>
+        </div>
+      </div>            
+
 
       <div class="form-group row mt-1">
         <label class="col-4 col-form-label col-form-label-sm">Remarks</label>
