--- a/src/app/pim/spot/pimspot.component.html
+++ b/src/app/pim/spot/pimspot.component.html
@@ -30,6 +30,7 @@
             <label class="col-2"></label>
             <div class="col-10">
               <button (click)="List('NEW')" class="btn btn-info btn-sm mr-1">Search</button>
+              <button (click)="List('DOWNLOAD')" class="btn btn-info btn-sm mr-1">Download</button>              
             </div>
           </div>
         </div>
